# cande-editor

./: LICENSE  README.md  __init__.py  cande-editor.py  cande_editor.py  main.py  pyproject.toml
cande_model/model_specs/: base.py
controllers/: __init__.py  cande_controller.py
docs/: INTERFACE_GUIDE.md
domain/core/: materials.py  parameters.py  resistance_factors.py
domain/core/constitutive/: soil.py  structural.py
domain/core/entities/: region.py  structure.py
domain/geometry/: constants.py  line.py  point.py  polygon.py
models/: __init__.py  cande_model.py  element.py  node.py
tests/domain/core/: test_materials.py  test_parameters.py  test_resistance_factors.py
tests/domain/core/constitutive/: soil.py  test_soil.py  test_structural.py
tests/domain/geometry/: test_line.py  test_point.py  test_polygon.py
tests/utils/: test_base_model.py  test_entity_reference_container.py  test_identifiable.py  test_registry.py
utils/: __init__.py  base_model.py  constants.py  copyable.py  identifiable.py  registry.py
views/: __init__.py  canvas_view.py  main_window.py
