[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cande_editor"
version = "2.0"
description = "A GUI tool for editing CANDE input files (.cid)"
authors = [
    {name = "Rick Teachey", email = "ricky@teachey.org"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
cande-editor = "main:main"

[tool.setuptools.py-modules]
modules = [
    "cande_editor",
    "controllers",
    "domain",
    "models",
    "utils",
    "views",
    "main",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
